Fixed spacing issue.

--- a/css/css.css
+++ b/css/css.css
@@ -65,7 +65,8 @@ h1 {
 }
 
 img {
-  width: 100%
+  width: 100%;
+  margin-bottom: -4px;
 }
 
 .figcap {
